Show wallpaper context menu in home launcher

Changes:
Show the context menu in home launcher in the same way as that in
wallpaper when the background is long-pressed or right clicked.

BUG=832993

Change-Id: I5f2d769884b2313a8a32254522428a73e13b9665
Reviewed-on: https://chromium-review.googlesource.com/1024728
Commit-Queue: Weidong Guo <weidongg@chromium.org>
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#553371}
Former-commit-id: 053b929ffe4964f02782545250113d5c543a9a5b