ash/app_list/app_list_view_delegate_mash.h
@@ -50,6 +50,9 @@ class ASH_EXPORT AppListViewDelegateMash
   void AddObserver(app_list::AppListViewDelegateObserver* observer) override;
   void RemoveObserver(app_list::AppListViewDelegateObserver* observer) override;
 
+  void ShowWallpaperContextMenu(const gfx::Point& onscreen_location,
+                                ui::MenuSourceType source_type) override;
+
  private:
   ash::AppListControllerImpl* owner_;
   base::string16 last_raw_query_;
